--- a/quroa-nlp.ipynb
+++ b/quroa-nlp.ipynb
@@ -9,15 +9,15 @@
     "0. [数据预处理](#ch2)\n",
     "0. [建模](#ch3)\n",
     "0. [预测和可视化](#ch4)\n",
-    ">数据集是一句文本，对应一个label,label就是0，1分类。我的思路就是使用双向LSTM模型，保留最后一个输出。\n",
-    "我先对文本进行预处理，删除英文里的停止语气词，再转化大小写。我没有进行词性标注，因为这个分类问题我觉得没有涉及到实体识别。\n",
+    ">总体思路是：1.将文本转化为词向量 2.词向量喂入模型。\n",
+    "如何转换？1.open(glove.txt)作为embeding索引，应为字典格式。2.Glove基于字词级别的分词，调用keras的tokenizer，进行fit文本，这步主要为了得到字词的word_index\n",
     "\n",
-    ">对处理好的文本进行token，生成Token词典，再用预先训练好的Glove语料库，提取出嵌入矩阵，（这里我计算了一下token语料库的特征数量，其实也就是词的数量，大概有20W+，最后我将最大特征设成了10w，主要还是考虑到运行速度的问题。）最大句子长度我设置的是60，也是分析了这个数据，最长的句子为100，有七八十的样本都在60之前，所以我设置的是60。\n",
+    ">一般多少词有多少特征，可以建立max_feature(可以自己设置) x 300d的全0矩阵，遍历word_index，查找单词是否出现在一开始读入的embedding索引中，存在就get(word）获得词向量填充到矩阵对应行中。\n",
     "\n",
-    ">建模阶段：使用了双向LSTM模型，设置了两层LSTM，只有第一层的双向的。因为可以获得一个完整的句子，双向RNN能更好的处理信息。这里我尝试再两个LTSM层之间加入了一个一维卷积和一维最大池化层，进行下采样，因为双向LSTM的参数特别多，三个门我设置的是256，之后就100w+的参数，这个也是我参考了一些其他的结构，发现可以这么设置，就尝试了一下。（还有两个dropout层）\n",
+    ">建模阶段：使用了双向LSTM模型，设置了两层LSTM，最后一层只输出一个值。(现在感觉加入一维卷积后输入的向量很奇怪，RNN不是每个cell都有输入了？TODO)\n",
     "\n",
-    ">然后结果其实有点过拟合，但是我是先交了一次，后来因为RNN训练有些慢，没有再尝试，我思路是将dropout的比例提高点，或者增加Batch的大小。\n",
-    "分类采用的F1分数，也就是精确率和召回率的平均分数最为判断哪一类的门槛。我算出来最佳是0.3"
+    ">结果其实有点过拟合，可以加入LN层标准化，或者增加Batch的大小。\n",
+    "分类采用的F1分数，也就是精确率和召回率的平均分数最为判断哪一类的门槛。算出来最佳是0.3"
    ]
   },
   {
